# tpm2-tss

./: .appveyor.yml  .cirrus.yml  .clang-format  .clang-tidy  .codecov.yml  .cproject  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .iwyu.imp  .lgtm.yml  .project  .readthedocs.yml  .travis.yml  AUTHORS  Android.mk  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  ChangeLog  Dockerfile  Doxyfile.in  INSTALL  INSTALL.md  LICENSE  MAINTAINERS  MAINTAINERS.md  Makefile-fuzz.am  Makefile-test.am  Makefile.am  Makefile.in  README.md  RELEASE.md  REUSE.toml  VERSION  appveyor.yml  azure-pipelines.yml  bootstrap  (+17 more)
resourcemgr/: Makefile  Makefile.am  Makefile.in  criticalsection.h  criticalsection_linux.c  criticalsection_windows.c  getcommands.c  makefile  resourceMgr.sln  resourceMgr.vcxproj  resourcemgr.c  resourcemgr.h
resourcemgr/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  resourceMgr.ilk  resourceMgr_manifest.rc  vc100.idb
src/: meson.build
src/tss2-esys/: CMakeLists.txt  esys_context.c  esys_cp_rp_hash.c  esys_crypto.c  esys_crypto.h  esys_crypto_gcrypt.c  esys_crypto_gcrypt.h  esys_crypto_mbed.c  esys_crypto_mbed.h  esys_crypto_mbedtls.c  esys_crypto_mbedtls.h  esys_crypto_ossl.c  esys_crypto_ossl.h  esys_free.c  esys_int.h  esys_iutil.c  esys_iutil.h  esys_mu.c  esys_mu.h  esys_tcti_default.c  esys_tcti_default.h  esys_tr.c  esys_types.h  openssl.props  packages.config  tpm2_type_check.c  tpm2_type_check.h  tss2-esys.sln  tss2-esys.vcxproj  tss2-esys.vcxproj.filters
src/tss2-fapi/: efi_event.h  fapi_certificates.h  fapi_crypto.c  fapi_crypto.h  fapi_int.h  fapi_policy.h  fapi_types.h  fapi_util.c  fapi_util.h  ifapi_config.c  ifapi_config.h  ifapi_curl.c  ifapi_curl.h  ifapi_eventlog.c  ifapi_eventlog.h  ifapi_eventlog_system.c  ifapi_eventlog_system.h  ifapi_get_intl_cert.c  ifapi_get_intl_cert.h  ifapi_get_web_cert.c  ifapi_get_web_cert.h  ifapi_helpers.c  ifapi_helpers.h  ifapi_ima_eventlog.c  ifapi_ima_eventlog.h  ifapi_io.c  ifapi_io.h  ifapi_json_deserialize.c  ifapi_json_deserialize.h  ifapi_json_eventlog_deserialize.h  ifapi_json_eventlog_serialize.c  ifapi_json_eventlog_serialize.h  ifapi_json_serialize.c  ifapi_json_serialize.h  ifapi_keystore.c  ifapi_keystore.h  ifapi_macros.h  ifapi_object.h  ifapi_policy.c  ifapi_policy.h  (+25 more)
src/tss2-mu/: CMakeLists.txt  base-types.c  tpm2b-types.c  tpma-types.c  tpml-types.c  tpms-types.c  tpmt-types.c  tpmu-types.c  tss2-mu.vcxproj
src/tss2-policy/: tss2_policy.c
src/tss2-rc/: CMakeLists.txt  tss2-rc.vcxproj  tss2_rc.c
src/tss2-sys/: CMakeLists.txt  CommandUtil.c  CompareSizedByteBuffer.c  ConcatSizedByteBuffer.c  GetDigestSize.c  GetNumHandles.c  sysapi_util.c  sysapi_util.h  tss2-sys.vcxproj
src/tss2-tcti/: CMakeLists.txt  sockets.c  sockets.h  tcti-cmd.c  tcti-cmd.h  tcti-common.c  tcti-common.h  tcti-device.c  tcti-device.h  tcti-helper-common.c  tcti-helper-common.h  tcti-i2c-ftdi.c  tcti-i2c-ftdi.h  tcti-i2c-helper.c  tcti-i2c-helper.h  tcti-libtpms.c  tcti-libtpms.h  tcti-mssim.c  tcti-mssim.h  tcti-network.c  tcti-network.h  tcti-null.c  tcti-null.h  tcti-pcap-builder.c  tcti-pcap-builder.h  tcti-pcap.c  tcti-pcap.h  tcti-py.c  tcti-py.h  tcti-spi-ftdi.c  tcti-spi-ftdi.h  tcti-spi-helper.c  tcti-spi-helper.h  tcti-spi-lt2go.c  tcti-spi-lt2go.h  tcti-spi-ltt2go.c  tcti-spi-ltt2go.h  tcti-spi.c  tcti-spi.h  tcti-spidev.c  (+24 more)
src/util/: aux_util.h  io.c  io.h  key-value-parse.c  key-value-parse.h  log.c  log.h  tpm2b.h  tss2_endian.h
src/util-io/: io.c  io.h
test/: CheckOverflow_unit.c  CommonPreparePrologue_unit.c  CopyCommandHeader_unit.c  getcommands-malloc-mock_unit.c  marshal-TPM2B-simple_unit.c  marshal-UINT16_unit.c  marshal-UINT32_unit.c  meson.build  tcti-device_unit.c  tcti_device.c  tcti_device_test.c  tcti_device_test.h  unmarshal-UINT16_unit.c  unmarshal-UINT32_unit.c
test/bindings/: pytpm2tss
test/data/: test-fapi-policies.h
test/fuzz/: main-sapi.cpp  main-sys.c  main-sys.cpp  tcti-spi-helper-fuzz-test.c
test/helper/: cmocka_all.h  pytcti.py  tpm_cmd_tcti_dummy.c  tpm_dumpstate.c  tpm_getek.c  tpm_getek_ecc.c  tpm_startup.c  tpm_transientempty.c  tpm_writeekcert.c
test/integration/: abi-version.int.c  asymmetric-encrypt-decrypt.c  asymmetric-encrypt-decrypt.int.c  command-cancel.int.c  context-util.c  context-util.h  create-keyedhash-sha1-hmac.int.c  create-loaded.int.c  create-primary-rsa-2048-aes-128-cfb.int.c  encrypt-decrypt-2.int.c  encrypt-decrypt.int.c  entity-util.c  esys-act-set-timeout.int.c  esys-audit.int.c  esys-auto-session-flags.int.c  esys-certify-creation.int.c  esys-certify.int.c  esys-certifyX509.int.c  esys-change-eps.int.c  esys-check-auth-with-trailing-zero.int.c  esys-clear-control.int.c  esys-clear.int.c  esys-clockset.int.c  esys-commit.int.c  esys-cp-hash.int.c  esys-create-fail.int.c  esys-create-password-auth.int.c  esys-create-policy-auth.int.c  esys-create-primary-hmac.int.c  esys-create-session-auth.int.c  esys-createloaded.int.c  esys-crypto.int.c  esys-duplicate.int.c  esys-ecc-encrypt-decrypt.int.c  esys-ecc-parameters.int.c  esys-ecdh-keygen.int.c  esys-ecdh-zgen.int.c  esys-encrypt-decrypt.int.c  esys-event-sequence-complete.int.c  esys-evict-control-serialization.int.c  (+215 more)
test/resourcemgr/: localtpm.c
test/tpmclient/: CatSizedByteBuffer.c  CopySizedBuffer.c  CreateNullSession.c  DecryptEncrypt.c  Entity.c  LoadExternalHMACKey.c  Makefile.am  Makefile.in  SessionHmac.c  SetLocality.c  StartAuthSession.c  TpmCalcPHash.c  TpmHandleToName.c  TpmHash.c  TpmHmac.c  kdfa.c  makefile  sample.h  syscontext.c  syscontext.h  tcti_util.c  tcti_util.h  tpmclient.c  tpmclient.cpp  tpmclient.h  tpmclient.int.c  tpmclient.int.cpp  tpmclient.int.h  tpmclient.sln  tpmclient.vcxproj  tpmclient_wo_rm.h
test/tpmtest/: stdafx.cpp  tpmtest.c  tpmtest.cpp  tpmtest.sln  tpmtest.vcxproj
test/unit/: CheckOverflow.c  CommonPreparePrologue.c  CopyCommandHeader.c  (+77 more)
(+1433 files in other folders)
